Add git to the list of 'Esc' exceptions

BUG: 446355